<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_empty_content">You haven\'t added any shortcuts yet. Favourite\'d tools will appear here</string>

    <string name="menu_main_dashboard">Dashboard</string>
    <string name="menu_main_listings">Modules</string>

    <string name="tab_favourites">Favourites</string>
    <string name="tab_installed">Installed</string>
    <string name="tab_popular">Popular</string>
    <string name="tab_new">New</string>

    <string name="dashboard_title_shortcuts">Shortcuts</string>
    <string name="dashboard_title_modules">Modules</string>


    <string name="dashboard_details_install">Install</string>
    <string name="dashboard_details_uninstall">Uninstall</string>
    <string name="dashboard_details_installing">Installing</string>
    <string name="dashboard_details_uninstalling">Uninstalling</string>
    <string name="dashboard_details_installed">Installed</string>
    <string name="dashboard_details_error">Something went wrong</string>

    <string name="dashboard_uninstall_dialog_title">Uninstall Confirmation</string>
    <string name="dashboard_uninstall_dialog_message">Confirm if you would like to mark this module for removal. Note that removing modules may not be instant. The device will remove the modules when space becomes low.</string>
    <string name="dashboard_uninstall_dialog_uninstall">Uninstall</string>
    <string name="dashboard_uninstall_dialog_dismiss">Dismiss</string>

    <!--  Conversions  -->
    <string name="dashboard_conversion_title_ml_to_oz">Milliliters to Ounce</string>
    <string name="dashboard_conversion_title_km_to_m">Kilometers to Miles</string>
    <string name="dashboard_conversion_tile_l_to_gal">Liters to Gallon</string>
    <string name="dashboard_conversion_title_l100km_to_mpg">L/100Km to MPG</string>

</resources>